# senior-project

./: .gitignore
backend/: Cargo.toml
backend/migrations/1_create_users/: up.sql
backend/migrations/2022-09-13-170025_create_communities/: up.sql
backend/migrations/2022-09-13-170025_create_posts/: up.sql
backend/migrations/2022-10-11-151448_create_communities/: down.sql  up.sql
backend/migrations/2022-10-11-151448_create_posts/: up.sql
backend/migrations/2_create_communities/: up.sql
backend/migrations/3_create_posts/: up.sql
backend/src/: actions.rs  auth.rs  lib.rs  main.rs  models.rs  schema.rs
frontend/: package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
frontend/components/: Button.tsx  ContextMenu.tsx  CreateCommunity.tsx  CreatePost.tsx  Input.tsx  Login.tsx  Post.tsx  SegmentedControl.tsx  SideNav.tsx  Switch.tsx  TopNav.tsx  post.tsx
frontend/pages/: _app.tsx  index.tsx
frontend/pages/community/: [id].tsx  [name].tsx
frontend/pages/post/: [id].tsx
frontend/styles/: global.css
