[package]
name = "senior_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.3"
actix-web = "4.2.1"
chrono = { version = "0.4.22", features = ["serde"] }
diesel = { version = "2.0.2", features = ["mysql", "chrono", "r2d2"] }
dotenv = "0.15.0"
jsonwebtoken = "8.1.1"
serde = { version = "1.0.147", features = ["derive"] }
